hw06 fix tests